# ralph-orchestrator

./: .gitignore  AGENTS.md  Cargo.toml  PROMPT.md  README.md  mkdocs.yml  ralph.e2e.yml  ralph.yml
.agent/: memories.md  tasks.jsonl
.claude/commands/: verify-behaviors.md
.github/workflows/: ci.yml  docs.yml
crates/ralph-adapters/: Cargo.toml
crates/ralph-adapters/src/: cli_backend.rs  lib.rs  pty_executor.rs  stream_handler.rs
crates/ralph-cli/: Cargo.toml
crates/ralph-e2e/: Cargo.toml  README.md
crates/ralph-tui/: Cargo.toml
docs/: changelog.md  index.md
docs/advanced/: architecture.md  diagnostics.md  index.md  testing.md
docs/api/: index.md  ralph-adapters.md  ralph-cli.md  ralph-core.md  ralph-proto.md  ralph-tui.md
docs/concepts/: backpressure.md  hats-and-events.md  index.md  memories-and-tasks.md  ralph-wiggum-technique.md  tenets.md
docs/contributing/: index.md  setup.md
docs/examples/: index.md
docs/getting-started/: first-task.md  index.md  installation.md  quick-start.md
docs/guide/: backends.md  cli-reference.md  configuration.md  index.md  presets.md
docs/reference/: index.md  migration-v1.md
presets/: bugfix.yml  code-assist.yml  feature.yml  idea-to-commit.yml  pdd-to-code-assist.yml  refactor.yml
presets/minimal/: claude.yml  code-assist.yml  codex.yml  kiro.yml  opencode.yml  preset-evaluator.yml  smoke.yml  test.yml
specs/: behaviors.yaml
tasks/: context-file-injection.code-task.md
tools/e2e/: conftest.py  math_ops.py  math_utils.py  test_idle_timeout.py  test_iteration_lifecycle.py  test_marker_validation.py  (+4 more)
(+65 files in other folders)
